# Spotify-Partymode

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  partymode.db-journal  pyproject.toml  requirements.txt
spotify_partymode/: __init__.py  __main__.py  config.py  db.py  guide.py  main.py  queue_manager.py  security.py  settings_store.py  spotify_client.py
spotify_partymode/routers/: __init__.py  admin.py  auth.py  deps.py  guest.py
spotify_partymode/static/: admin.html  index.html  register.html
spotify_partymode/static/css/: style.css
spotify_partymode/static/js/: admin.js  guest.js
static/: admin.html  index.html  setup.html
static/css/: style.css
static/js/: admin.js  guest.js
