[project]
name = "spotify-partymode"
version = "0.1.0"
description = "A self-hosted party mode for Spotify: guests queue songs from their phones, a fixed playlist keeps playing in between."
authors = [{ name = "Domekologe" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "itsdangerous==2.2.0",
    "python-dotenv==1.0.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.7.0",
]

[project.scripts]
spotify-partymode = "spotify_partymode.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spotify_partymode*"]

# Ship the frontend (HTML/CSS/JS) as package data so it installs with pip.
[tool.setuptools.package-data]
spotify_partymode = ["static/*.html", "static/css/*.css", "static/js/*.js"]
